# Palworld-Companion-Tool

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  changelogs.md  pyproject.toml  requirements.txt  start.cmd  start.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release-windows.yml
resources/game_data/: characters.json  manifest.json  pal_spawns.json
resources/i18n/: de_DE.json  en_US.json  es_ES.json  fr_FR.json  ja_JP.json  ko_KR.json  ru_RU.json  zh_CN.json
resources/ui/themes/: darkmode.qss  lightmode.qss
scripts/: build.cmd  generate_game_data_manifest.py  test.cmd  validate_game_data.py
scripts/scrs/: pal_spawn_export.py  update_game_data.py
src/: app_info.py  boot_paths.py  bootup.py  common.py  resource_resolver.py
src/i18n/: __init__.py
src/palsav/: pyproject.toml
src/palsav/palsav/: __init__.py
src/palworld_aio/: __init__.py  breeding_analyzer.py  game_data.py  game_data_validation.py  main.py  pal_stats_repository.py  read_only_world.py  stat_calculator.py  team_builder.py  team_presets.py  team_storage.py  update_service.py  wiki_text.py
src/palworld_aio/map/: annotations.py  locations.py  mapgenie.py  progress.py  spawns.py
src/palworld_aio/ui/: main_window.py  pal_assets.py  pal_selector.py  parent_pair_selector.py  team_builder_widgets.py  team_selector.py
src/palworld_aio/ui/chrome/: styles.py
src/palworld_aio/ui/map_view/: location_popup.py  map_items.py  map_markers.py  map_view.py  mapgenie_view.py  spawn_heatmap.py
src/palworld_aio/ui/tabs/: about_tab.py  breeding_tab.py  docs_tab.py  map_tab.py  settings_tab.py  stats_calculator_tab.py  (+1 more)
src/palworld_aio/widgets/: __init__.py  breeding_tree.py  required_pals.py
src/palworld_coord/: __init__.py
tests/: README.md  conftest.py  pytest.ini  test_registry.py
tests/integration/: test_breeding_tree_expansion.py  test_build_configuration.py  test_companion_app.py  test_feature_boundary.py  test_game_data_json.py  test_installer_configuration.py  test_read_only_world.py  test_resource_integrity.py  test_team_builder.py  test_wiki.py
tests/unit/core_logic/: test_asset_paths.py  test_coords.py
tests/unit/palworld_aio_tests/: test_annotations.py  test_breeding_analyzer.py  test_game_data_validation.py  test_map_locations.py  test_map_progress.py  test_mapgenie.py  test_pal_selector.py  test_pal_spawn_export.py  test_pal_spawns.py  test_pal_stats_repository.py  test_parent_pair_selector.py  test_stat_calculator.py  test_team_builder.py  test_update_service.py  test_wiki_text.py
(+1 files in other folders)
